--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -7,15 +7,10 @@
                     <item name="components" xsi:type="array">
                         <item name="minicart_content" xsi:type="array">
                             <item name="children" xsi:type="array">
-                                <item name="extra_info" xsi:type="array">
-                                    <item name="component" xsi:type="string">uiComponent</item>
+                                <item name="freeshipping" xsi:type="array">
                                     <item name="config" xsi:type="array">
-                                        <item name="displayArea" xsi:type="string">extraInfo</item>uiComponent
-                                    </item>
-                                    <item name="children" xsi:type="array">
-                                        <item name="subtotal" xsi:type="array">
-                                            <item name="component" xsi:type="string">AHT_Checkout/js/view/message</item>
-                                        </item>
+                                        <item name="component" xsi:type="string">AHT_Checkout/js/view/message</item>
+                                        <item name="displayArea" xsi:type="string">freeShipping</item>
                                     </item>
                                 </item>
                             </item>
